[gd_scene load_steps=11 format=3 uid="uid://bym7a7acapc2h"]

[ext_resource type="Script" path="res://pause/pause_menu.gd" id="1_2squ4"]
[ext_resource type="Shader" path="res://pause/PauseMenu.gdshader" id="2_85q31"]
[ext_resource type="Theme" uid="uid://cdnxxxhxeteub" path="res://Default2.tres" id="3_fbl5r"]
[ext_resource type="AudioStream" uid="uid://b0j7g8feqws4h" path="res://audio/Hover_sound_effect.mp3" id="4_sfud4"]
[ext_resource type="AudioStream" uid="uid://b6g2wyihknjsn" path="res://audio/button_sound_effect.mp3" id="5_28h8j"]
[ext_resource type="PackedScene" uid="uid://f0g3c0x836gi" path="res://pause/options/Options.tscn" id="6_w4sjt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v8w0i"]
shader = ExtResource("2_85q31")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_oohap"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ggemx"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.849]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibcs5"]
_data = {
"RESET": SubResource("Animation_oohap"),
"blur": SubResource("Animation_ggemx")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2squ4")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_v8w0i")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.5
offset_top = -239.5
offset_right = 232.5
offset_bottom = 239.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fbl5r")
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fbl5r")
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="ChangeCharacter" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fbl5r")
theme_override_font_sizes/font_size = 30
text = "Change character"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fbl5r")
theme_override_font_sizes/font_size = 30
text = "settings"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fbl5r")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ibcs5")
}

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sfud4")

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_28h8j")

[node name="Options" parent="." instance=ExtResource("6_w4sjt")]
visible = false
layout_mode = 2
anchors_preset = 0

[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/ChangeCharacter" to="." method="_on_change_character_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ChangeCharacter" to="." method="_on_change_character_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
